--- a/example_file.config
+++ b/example_file.config
@@ -8,6 +8,7 @@
     "neighbors":[
      {"name":"sox-ig",
       "type":"network",
+      "vlans":[3535, 3536, 3537, 3538, 3539]},
      {"name":"gatech-ig",
       "type":"network",
       "vlans":[3535, 3536, 3537, 3538, 3539]},
