to_json() functions filled out. Fixed oversight on neighbors needing a physical port to be useful.

--- a/example_file.config
+++ b/example_file.config
@@ -7,12 +7,15 @@
       "rest_key":"asdfjkl;"},
     "neighbors":[
      {"name":"sox-ig",
+      "port":1,
       "type":"network",
       "vlans":[3535, 3536, 3537, 3538, 3539]},
      {"name":"gatech-ig",
+      "port":2,
       "type":"network",
       "vlans":[3535, 3536, 3537, 3538, 3539]},
-     {"name":"clemson"},
+     {"name":"clemson",
+      "port":3,
       "type":"network",
       "vlans":[3535, 3536, 3537, 3538, 3539]}]}
 ]}
