Testing prior to Flask work. Lots of little things changed.

--- a/example_file.config
+++ b/example_file.config
@@ -3,7 +3,7 @@
   "switches":[{
     "name": "sox-switch",
     "connection-info": {
-      "address":"corsa-a",
+      "address":"https://corsa-a",
       "rest_key":"asdfjkl;"},
     "neighbors":[
      {"name":"sox-ig",
