--- a/example_file.config
+++ b/example_file.config
@@ -1,5 +1,5 @@
 {
-  "adaptor-href-base":"https://1.2.3.4",
+  "adaptor-href-base":"https://1.2.3.4:5000/api/v1/",
   "switches":[{
     "name": "sox-switch",
     "connection-info": {
