Adding URN-based bridge generation per Xi Yang's request

--- a/example_file.config
+++ b/example_file.config
@@ -5,6 +5,7 @@
     "connection-info": {
       "address":"https://corsa-a",
       "rest_key":"asdfjkl;"},
+    "reserved-bridges": [1,2,3],
     "neighbors":[
      {"name":"sox-ig",
       "port":1,
